<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">LidCap</string>

    <string name="google_map_id">AIzaSyB4GuRusrTLlbnpvt4sEOq_0vHR15cLWno</string>

    <!--Login-->
    <string name="phone_num">Phone Number</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t have an account? <u>Sign Up</u></string>

    <string name="plz_enter_phone_num">Please Enter Phone Number</string>
    <string name="plz_enter_valid_phone_num">Please Enter Valid Phone Number</string>

    <!--User Selection-->
    <string name="service_provider">Service Provider</string>
    <string name="customer">Customer</string>

    <!--Provider Registration -->
    <string name="you_are_reg_provider"> You are registration as service provider</string>

    <!--Customer Registration -->
    <string name="you_are_reg_customer"> You are registration as customer</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>

    <string name="plz_enter_name">Please Enter Name</string>

    <!--Customer Home -->
    <string name="profile">Profile</string>
    <string name="issue_list">Issue List</string>
    <string name="appointment_list">Appointment List</string>
    <string name="advertisement_list">Advertisement List</string>
    <string name="notification">Notification</string>
    <string name="rate_app">Rate the App</string>
    <string name="contact">Contact</string>
    <string name="lip_cap_support">Lid Cap Support</string>
    <string name="about_the_app">About the app</string>
    <string name="logout">logout</string>
    <string name="provider_not_found">Provider not found. Please try again later</string>
    <string name="searching_nearest_provider">Searching nearest provider&#8230; Please wait few min</string>


    <!--Customer Map-->
    <string name="select_issue">Select the issue</string>
    <string name="reason_cancel">Reason for cancellation</string>
    <string name="expect_short_wait_time">Expected a Short wait time</string>
    <string name="unable_contact">Unable to contact</string>
    <string name="cobbler_denied_work">Cobbler denied to work</string>
    <string name="others">Others</string>
    <string name="type">Type</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="dont_cancel">Don\'t Cancel</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment</string>
    <string name="work_completed_on_time">Work completed on time</string>
    <string name="worked_properly">Worked properly</string>
    <string name="rate">Rate</string>
    <string name="review">Review</string>


    <!--Home Screen-->
    <string name="book_appointment">Book Appointment</string>
    <string name="user_not_update"> User does not update location setting</string>
    <string name="appointment_accepted"> Appointment Accepted</string>
    <string name="call_shoe_repairer"> Call Shoe Repairer</string>
    <string name="cancel_appointment"> Cancel the appointment</string>

    <string name="customer_name"> Customer name</string>
    <string name="call_customer">Call Customer</string>
    <string name="accept_appointment"> Accept the appointment</string>
    <string name="work_done">Work done</string>

    <!--Issue List-->
    <string name="completed">Completed</string>
    <string name="canceled">Canceled</string>

    <!--Provider side-->
    <string name="new_appointment">New appointment received!</string>
    <string name="view">View</string>

    <string name="request">Request</string>
    <string name="issues_type">Issue Type:</string>
    <string name="set_duration">Set Duration:</string>
    <string name="accept">Accept</string>


    <string name="success_completed">Successfully completed!</string>
    <string name="enter_the_amt"> Enter the amount</string>
    <string name="rubee_sym">\u20B9</string>

    <string name="choose_type">Choose Type</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <!--Dialog-->
    <!--<string-array name="duration_arr_list">-->
        <!--<item>10 min</item>-->
        <!--<item>15 min</item>-->
        <!--<item>20 min</item>-->
        <!--<item>25 min</item>-->
        <!--<item>30 min</item>-->
        <!--<item>more than 30 min</item>-->
        <!--<item>45 min</item>-->
        <!--<item>50 min</item>-->
        <!--<item>more than 1 hr</item>-->
    <!--</string-array>-->


    <!--General-->
    <string name="go_settings_per">You have denied the app permissions. Go to Settings and Enable the Permissions.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="arrival_time">Arrival Time : %1$s </string>
    <string name="approximate_arrival_time">Approximate Arrival Time : %1$s </string>
    <string name="reach_time">Reach Time : %1$s </string>
    <string name="no_internet"> Please Verify Your Internet Connection.</string>
    <string name="connect_time_out">Could not connect to LidCap App Server. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="logged_in_success">Logged In Successfully</string>
    <string name="registered_success">Registered Successfully</string>
    <string name="your_acc_activated">Your account will be shortly activated.</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>
    <string name="exit_msg">Press again to exit</string>
    <string name="err_create_frag">Error in creating fragment</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="profile_updated">Profile Updated Successfully</string>

    <string name="about_us">It is proposed to establish a mobile laundering system in the state for laundering and repairing and sale of leather products and footwear.

The Mobile App user shall be able to identify the nearest ‘service provider’ (laundering van) from the map and book for service. The service provider shall be able to lock a call or reject a call stating a reason. In the event of locking a call, the service provider shall be able to indicate the likely time of reaching the user. After rendering of the service, the user shall be able to provide feedback by choosing one of the feedback options.</string>


    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure you want to Delete?</string>
</resources>
