<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LayoutWidMatch_HeiWrap"
    android:layout_margin="@dimen/size20"
    android:layout_marginTop="@dimen/text18"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/size3">

    <LinearLayout
        style="@style/LayoutWidMatch_HeiWrap"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/TextOpenSansSemiBold"
            android:padding="@dimen/size10"
            android:text="@string/success_completed"
            android:textColor="@color/black"
            android:textSize="@dimen/text16" />

        <View
            style="@style/LayoutWidMatch_HeiWrap"
            android:layout_height="@dimen/size1"
            android:layout_marginStart="@dimen/size18"
            android:layout_marginEnd="@dimen/size18"
            android:background="@color/gray" />

        <LinearLayout
            style="@style/LayoutWidMatch_HeiWrap"
            android:layout_marginStart="@dimen/size23"
            android:layout_marginTop="@dimen/size6"
            android:layout_marginEnd="@dimen/size23"
            android:layout_marginBottom="@dimen/size6"
            android:orientation="horizontal">

            <TextView
                style="@style/TextOpenSansRegular"
                android:layout_width="0dip"
                android:layout_marginTop="@dimen/size4"
                android:layout_marginEnd="@dimen/size2"
                android:layout_marginBottom="@dimen/size4"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="start|center_vertical"
                android:text="@string/issues_type"
                android:textColor="@color/black"
                android:textSize="@dimen/text12" />

            <TextView
                android:id="@+id/issues_type_txt"
                style="@style/TextOpenSansRegular"
                android:layout_width="0dip"
                android:layout_marginTop="@dimen/size4"
                android:layout_marginEnd="@dimen/size2"
                android:layout_marginBottom="@dimen/size4"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:maxLines="2"
                android:textColor="@color/black"
                android:textSize="@dimen/text12" />

        </LinearLayout>

        <LinearLayout
            style="@style/LayoutWidMatch_HeiWrap"
            android:layout_marginStart="@dimen/size23"
            android:layout_marginTop="@dimen/size6"
            android:layout_marginEnd="@dimen/size23"
            android:layout_marginBottom="@dimen/size6"
            android:orientation="horizontal">

            <TextView
                style="@style/TextOpenSansRegular"
                android:layout_width="0dip"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/size4"
                android:layout_marginEnd="@dimen/size2"
                android:layout_marginBottom="@dimen/size4"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/enter_the_amt"
                android:textColor="@color/black"
                android:textSize="@dimen/text12" />
            <TextView
                style="@style/TextOpenSansRegular"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center_vertical"
                android:text="@string/rubee_sym"
                android:textColor="@color/black"
                android:textSize="@dimen/text18" />

            <EditText
                android:id="@+id/amount_edt"
                android:layout_width="0dip"
                android:layout_weight="1"
                style="@style/EditTextOpenSansRegular"
                android:background="@drawable/edt_gray_bg"
                android:gravity="center"
                android:hint="@string/type"
                android:imeActionId="100"
                android:imeActionLabel="@string/cancel"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="numberSigned"
                android:maxLines="1"
                android:padding="@dimen/size3"
                tools:ignore="Autofill" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size40"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/alert_negative_btn"
                style="@style/ButtonOpenSansSemiBold"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/alert_positive_btn"
                style="@style/ButtonOpenSansSemiBold"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text14" />

        </LinearLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>